# cordia

./: .gitignore  .travis.yml  CMakeLists.txt  DEVELOPMENT.md  LICENSE.md  Notes.md  README.md  analysis.R  anonymize.py  cpp_setup.sh  dublin_conference.sh  generate_pilot_excel.sh  generate_problems.sh  percentile_reduction.md  pylintrc  python_setup.sh  requirements.txt  rows.py  rows_cli.py  rows_compare.py  solution.gexf
dependencies/cmake/modules/: FindAmpl.cmake  FindCbc.cmake  FindGFlags.cmake  FindGexf.cmake  FindGlog.cmake  FindGurobi.cmake  FindJson.cmake  FindORtools.cmake  FindOsrm.cmake  FindRt.cmake  FindSparsehash.cmake
people/: list_employee_schedule.sql  list_schedule_interval.sql  list_shift_interval.sql  query_org_unit_position_count.sql  query_struct_position_count.sql
rows/: address.py  analysis.py  anonymize.py  application.py  clustering.py  console.py  coordinates.py  csv_data_source.py  database_connector.py  distance_matrix.py  geo_coding.py  history_command.py  load.py  local_inspect.py  location_finder.py  make_instance_command.py  parser.py  plot.py  point_of_interest.py  pull_command.py  routing_server.py  settings.py  solution_command.py  solve_command.py  sql_data_source.py  version.py  version_command.py  visualisation_command.py
rows/forecast/: cluster.py  forecast.py  main.py  run_forecast.sh  visit.py
rows/model/: address.py  area.py  carer.py  data_object.py  datetime.py  day.py  diary.py  event.py  historical_visit.py  history.py  json.py  location.py  metadata.py  object.py  past_visit.py  plain_object.py  point_of_interest.py  problem.py  rest.py  schedule.py  service_user.py  shift_pattern.py  visit.py
rows/test/: csv_data_source_test.py  location_finder_test.py  parser_test.py  pull_command_test.py  sql_test.py
rows/test/.pytest_cache/v/cache/: lastfailed
rows/test/model/: address_test.py  area_test.py  carer_test.py  problem_test.py  shift_pattern_test.py  visit_test.py
rows/util/: file_system.py  parse.py
rows/visualisation/: dynamic_network.py  excel_graphs.py  graphs.py  preprocessing.py  print_schedule.py  problem.py  solution.gexf
september-pilot/: c100.sh  c100_compare.sh  c270.sh  c270_compare.sh  c380.sh  c380_compare.sh  generate_problems.sh
simulations/: make_plots.sh
simulations/current_review_simulations/: cp_solve.sh  make_data.sh  make_plots.sh  mip_solve.sh
simulations/initial_simulations/: make_plots.sh
spark_care/: question_aom_without_carers.sql
sql/: Walkthrough.md  calculate_duration.sql  explore_areas.sql  schedule_execution.sql  schedule_execution_2.sql  schedule_execution_3.sql
sql/people/: OBSOLETE_list_employee_schedule.sql  OBSOLETE_question_aom_assigned_shifts.sql  OBSOLETE_question_carers_with_multiple_aom.sql  OBSOLETE_question_shift_patterns.sql  list_aom.sql  list_carer_intervals.sql  list_employee_schedule.sql  list_employees_in_aom.sql  list_leaves.sql  list_schedule_details.sql  list_schedules.sql
sql/spark_care/: OBSOLETE_list_aom.sql  OBSOLETE_question_aom_carer.sql  OBSOLETE_schedules_within_time_and_area.sql  list_carer_visits.sql  list_visits_within_time_windows.sql  schedules_within_time_and_area.sql
src/: make_phd_plots.sh
src/main/: address.cpp  address.h  benchmark_problem_data.cpp  benchmark_problem_data.h  break.cpp  break.h  break_constraint.cpp  break_constraint.h  calendar_visit.cpp  calendar_visit.h  cancel_search_limit.cpp  cancel_search_limit.h  carer.cpp  carer.h  constraint_operations.cpp  constraint_operations.h  data_time.cpp  data_time.h  declined_visit_evaluator.cpp  declined_visit_evaluator.h  delay_constraint.cpp  delay_constraint.h  delay_not_expected_constraint.cpp  delay_not_expected_constraint.h  delay_probability_constraint.cpp  delay_probability_constraint.h  delay_probability_reduction_solver.cpp  delay_probability_reduction_solver.h  delay_riskiness_constraint.cpp  delay_riskiness_constraint.h  delay_riskiness_reduction_solver.cpp  delay_riskiness_reduction_solver.h  delay_tracker.cpp  delay_tracker.h  diary.cpp  diary.h  duration_sample.cpp  duration_sample.h  estimate_solver.cpp  estimate_solver.h  (+116 more)
src/main/util/: aplication_error.cpp  aplication_error.h  date_time.h  error_code.cpp  error_code.h  hash.h  input.cpp  input.h  json.cpp  json.h  logging.cpp  pretty_print.cpp  pretty_print.h  routing.cpp  routing.h  validation.cpp  validation.h
src/test/: breaks_repro_test.cpp  cvrptw_lib.cpp  cvrptw_lib.h  location_container_test.cpp  location_test.cpp  osrm_test.cpp  validation_repro_test.cpp  vrp_test.cpp
src/test/util/: logging.h
